[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlreporter"
version = "0.0.71"
description = "CLI tool that aggregates public security scanners into one report for a URL."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paolo" }]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
urlreporter = "urlreporter.cli:main"

[tool.setuptools.packages.find]
include = ["urlreporter*"]
